# FacebookSDK

./: .gitignore  CMakeLists.txt  FacebookSDK.sln  winsdkfb.TemporaryKey.pfx  winsdkfb.sln
FacebookSDK/: Class.cpp  Class.h  Class.idl  ColorLuminosityConverter.cpp  ColorLuminosityConverter.h  ColorLuminosityConverter.idl  FBAccessTokenData.cpp  FBAccessTokenData.h  FBAppEvents.cpp  FBAppEvents.h  FBAppRequest.cpp  FBAppRequest.h  FBClient.cpp  FBClient.h  FBConstants.h  FBDialog.cpp  FBDialog.h  FBError.cpp  FBError.h  FBFeedRequest.cpp  FBFeedRequest.h  FBGraphObjectDefinition.ttinclude  FBGraphObjectHeader.ttinclude  FBGraphObjectImplementation.ttinclude  FBMediaObject.cpp  FBMediaObject.h  FBMediaStream.cpp  FBMediaStream.h  FBPaginatedArray.cpp  FBPaginatedArray.h  FBPermissions.cpp  FBPermissions.h  FBResult.cpp  FBResult.h  FBSendRequest.h  FBSession.cpp  FBSession.h  FBSingleValue.cpp  FBSingleValue.h  FacebookAccessTokenData.cpp  (+119 more)
FacebookSDK.CS.Tests/: FacebookSDK.CS.Tests.csproj  MockHttpClient.cs  Package.appxmanifest  UnitTest.cs  UnitTestApp.xaml  UnitTestApp.xaml.cs
FacebookSDK.TestClient/: App.cpp  App.h  App.idl  App.xaml  FacebookSDK.TestClient.vcxproj  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  MockHttpClient.cpp  MockHttpClient.h  Package.appxmanifest  readme.txt
FacebookSDK.Tests/: BlankPage.xaml  BlankPage.xaml.cpp  BlankPage.xaml.h  ColorLuminosityConverter.Tests.cpp  DateTime.Tests.cpp  FBReturnObject.h  FacebookAccessTokenData.Tests.cpp  FacebookAppRequest.Tests.cpp  FacebookError.Tests.cpp  FacebookMediaObject.Tests.cpp  FacebookMediaStream.Tests.cpp  FacebookResult.Tests.cpp  FacebookSDK.Tests.vcxproj  FacebookSDK.Tests.vcxproj.filters  FacebookSingleValue.Tests.cpp  Graph.Tests.cpp  GraphUriBuilder.Tests.cpp  HlsColor.Tests.cpp  HttpClientFake.cpp  MockHttpClient.cpp  MockHttpClient.h  Package.appxmanifest  PropertySet.Tests.cpp  ScaleConverter.Tests.cpp  UnitTestApp.xaml  UnitTestApp.xaml.cpp  UnitTestApp.xaml.h
winsdkfb/: CMakeLists.txt  ColorLuminosityConverter.cpp  ColorLuminosityConverter.h  ColorLuminosityConverter.idl  FBAccessTokenData.cpp  FBAccessTokenData.h  FBAccessTokenData.idl  FBAppEvents.cpp  FBAppEvents.h  FBAppEvents.idl  FBAppRequest.cpp  FBAppRequest.h  FBAppRequest.idl  FBClient.cpp  FBClient.h  FBClient.idl  FBDialog.cpp  FBDialog.h  FBDialog.idl  FBDialog.xaml  FBError.cpp  FBError.h  FBError.idl  FBFeedRequest.cpp  FBFeedRequest.h  FBFeedRequest.idl  FBGraphObjectDefinition.ttinclude  FBGraphObjectHeader.ttinclude  FBGraphObjectImplementation.ttinclude  FBLoginButton.cpp  FBLoginButton.h  FBLoginButton.idl  FBMediaObject.cpp  FBMediaObject.h  FBMediaObject.idl  FBMediaStream.cpp  FBMediaStream.h  FBMediaStream.idl  FBPaginatedArray.cpp  FBPaginatedArray.h  (+129 more)
winsdkfb.CS.Tests/: MockHttpClient.cs  Package.appxmanifest  UnitTest.cs  UnitTestApp.xaml  UnitTestApp.xaml.cs  winsdkfb.CS.Tests.csproj
winsdkfb.Google.Tests/: DateTime.gtest.cpp  FBAccessTokenData.gtest.cpp  FBError.gtest.cpp  FBMediaObject.gtest.cpp  FBPermissions.gtest.cpp  FBResult.gtest.cpp  FBSingleValue.gtest.cpp  Graph.gtest.cpp  IntegrationTests.gtest.cpp  MockHttpClient.cpp  MockHttpClient.h  pch.h  winsdkfb.Google.Tests.vcxproj
winsdkfb.Tests/: BlankPage.xaml  BlankPage.xaml.cpp  BlankPage.xaml.h  ColorLuminosityConverter.Tests.cpp  DateTime.Tests.cpp  FBAccessTokenData.Tests.cpp  FBAppRequest.Tests.cpp  FBError.Tests.cpp  FBMediaObject.Tests.cpp  (+24 more)
winsdkfb/Themes/: Generic.xaml
(+26 files in other folders)
